fix contact page visibilty

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html{
     height: 100%;
     scroll-behavior: smooth;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 body {
@@ -143,11 +143,11 @@ img {
     padding-bottom: 10%;
     padding-left: 3%;
     padding-right: 3%;
-    width: 100%;
+    width: 94%;
     display: inline-flex;
     height: auto;
 }
-
+/* 
 .UXPA .projectdescriptions{
     color: #40BAD5;
 }
@@ -158,7 +158,7 @@ img {
 
 .virtualreality .projectdescriptions{
     color: #035AA6;
-}
+} */
 
 .UXPA{
     background-color: #40BAD5;
@@ -207,11 +207,11 @@ img {
 } */
 
 .projectlogo{
-    display: block;
     border-radius: 10px;
     width: 90%;
     margin:5%;
-    position: absolute;
+    position: static;
+    vertical-align: middle;
 }
 
 .contactpage{
@@ -222,7 +222,7 @@ img {
 
     /* padding-left: 5%;
     padding-top: 5%; */
-    /* position: absolute; */
+    position: absolute;
     /* transform: translate(-50%, -50%); */
     font-size: 18px;
     text-align: center;
@@ -232,7 +232,7 @@ img {
     padding: 0;
     border: 0;
     display: inline-block;
-    padding-bottom: 6%;
+    padding-bottom: 6%
 }
 
 .chat{
@@ -295,6 +295,10 @@ a:visited{
 
 a { text-decoration: none; }
 
+a.herebutton{
+    color: black;
+}
+
 .herebutton a:link{
     color: black;
 }
@@ -326,7 +330,7 @@ a { text-decoration: none; }
 .projectdescriptions {
     visibility: hidden;
     display: block;
-    position: static;
+    position: absolute;
     font-family: "Montserrat", sans-serif;
     font-size: 100%;
     background-color: white;
@@ -335,4 +339,18 @@ a { text-decoration: none; }
     text-align: left;
     border-radius: 10px;
     color: black;
+    overflow-y: scroll;
+    height: 70%;
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.projectdescriptions::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.projectdescriptions {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
